--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     restart: always
     ports:
       - '3000:3000'
-
+    environment:
+      ENABLE_BASIC_AUTH: "false"
 
   api:
     build:
